# RaylibSetupCpp

./: CMakeLists.txt  README.md
docs/: example_doc.html
lib/: example_lib.hpp
res/: example_img.hpp
scripts/: example.py
src/: example.cpp
